- adding css for small icons - Bug 300 - lightening highlight color, highlighting all aligned words in both source and aligned text

--- a/basic-reader/trunk/skin/alph-infl-noun.css
+++ b/basic-reader/trunk/skin/alph-infl-noun.css
@@ -94,6 +94,6 @@ ul.stem-classes li.highlight-ending {
 }
 
 ul.stem-classes li.highlight-ending .stem-class-desc {
-    background-color: #F6D918;
+    background-color: #FDE543;
 }
 
