--- a/basic-reader/trunk/skin/alph-infl-paradigm.css
+++ b/basic-reader/trunk/skin/alph-infl-paradigm.css
@@ -39,7 +39,7 @@ th.empty-cell {
 }
 
 td.selected {
-    background-color: #F6D918;
+    background-color: #FDE543;
     font-weight: bold;
 }
 
