--- a/basic-reader/trunk/skin/alph-infl.css
+++ b/basic-reader/trunk/skin/alph-infl.css
@@ -213,7 +213,7 @@ td.highlight-ending {
 }
 
 span.highlight-ending {
-    background-color: #F6D918;
+    background-color: #FDE543;
     font-weight: bold;
     font-size: 1.25em;
 }
