--- a/basic-reader/trunk/skin/alph-verb-conj-group.css
+++ b/basic-reader/trunk/skin/alph-verb-conj-group.css
@@ -190,7 +190,7 @@ td.highlight-ending {
 }
 
 span.highlight-ending {
-    background-color: #F6D918;
+    background-color: #FDE543;
     font-weight: bold;
     font-size: 1.25em;
 }
